--- a/index.html
+++ b/index.html
@@ -15,8 +15,13 @@
 
         <!-- Main Start -->
         <div class="main">
+
+            <!-- Header Start -->
+
+            <!-- Header End -->
+
             <!-- Home Section Start -->
-            <section class="home-section align-items-center hidden">
+            <section class="home-section align-items-center">
                 <div class="container">
                     <div class="row align-items-center">
                         <div class="home-text">
@@ -122,7 +127,7 @@
             <!-- About Section End -->
 
             <!-- Portfolio Section Start -->
-            <section class="portfolio-section sec-padding">
+            <section class="portfolio-section sec-padding hidden">
                 <div class="container">
                     <div class="row">
                         <div class="section-title">
@@ -273,6 +278,64 @@
             </section>
             <!-- Portfolio Section End -->
 
+            <!-- Contact Section Start -->
+            <section class="contact-section sec-padding">
+                <div class="container">
+                    <div class="row">
+                        <div class="section-title">
+                            <h2>Contacts</h2>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="contact-form">
+                            <form action="">
+                                <div class="row">
+                                    <div class="input-group">
+                                        <input type="text" placeholder="Name" class="input-control" required>
+                                    </div>
+
+                                    <div class="input-group">
+                                        <input type="text" placeholder="Email" class="input-control" required>
+                                    </div>
+
+                                    <div class="input-group">
+                                        <input type="text" placeholder="Subject" class="input-control" required>
+                                    </div>
+
+                                    <div class="input-group">
+                                        <textarea placeholder="Message" class="input-control" required></textarea>
+                                    </div>
+                                    <div class="submit-btn">
+                                        <button type="submit" class="btn">Send Message</button>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+                        <div class="contact-info">
+                            <div class="contact-info-item">
+                                <h3>Email</h3>
+                                <p>joachimmwengi@gmail.com</p>
+                            </div>
+
+                            <div class="contact-info-item">
+                                <h3>Phone Number</h3>
+                                <p>+254 719 417 307 / +250 783 713 867</p>
+                            </div>
+
+                            <div class="contact-info-item">
+                                <h3>Social Accounts</h3>
+                                <div class="social-links">
+                                    <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
+                                    <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
+                                    <a href="#" target="_blank"><i class="fab fa-linkedin"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- Contact Section End -->
+
 
         </div>
         <!-- Main End -->
@@ -286,20 +349,10 @@
                         <div class="pp-thumbnail">
                             <img src="./images/portfolio/NikeCleatStoreWeb_Chrome.png"  alt="pp-thumbnail">
                         </div>
-                        <h3>Web App UI Design</h3>
+                        <h3></h3>
                     </div>
                     <div class="pp-body">
-                        <div class="description">
-                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis molestiae minima mollitia incidunt perspiciatis, possimus laudantium, asperiores dignissimos amet eos sed officiis consectetur. Facilis quae molestiae maxime excepturi dolorum iste quis libero? Est iusto consequuntur, quasi atque veritatis, ab doloremque quis exercitationem asperiores assumenda iste possimus! Excepturi architecto quisquam ad.</p>
-                        </div>
-                        <div class="general-info">
-                            <ul>
-                                <li>Created - <span>09 Feb 2021</span></li>
-                                <li>Technologies Used - <span>HTML, CSS, Javascript, Bootstrap</span></li>
-                                <li>Role - <span>Web Application Development</span></li>
-                                <li>View Prototype - <span><a href="#" target="_blank">Link</a></span></li>
-                            </ul>
-                        </div>
+                        
                     </div>
                 </div>
             </div>
