--- a/index.html
+++ b/index.html
@@ -13,23 +13,65 @@
 
     <body>
 
+        <!-- Page Loader Start -->
+        <div class="page-loader">
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+        <!-- Page Loader End -->
+
+        <!-- Background Cirlces Start -->
+        <div class="bg-circles">
+            <div class="circle-1"></div>
+            <div class="circle-2"></div>
+            <div class="circle-3"></div>
+        </div>
+        <!-- Background Cirlces End -->
+
+
+        <!-- Overlay Start -->
+        <div class="overlay">
+
+        </div>
+        <!-- Overlay End -->
+
+         
         <!-- Main Start -->
-        <div class="main">
+        <div class="main hidden">
 
             <!-- Header Start -->
-
+            <div class="header">
+                <div class="container">
+                    <div class="row flex-end">
+                        <button type="button" class="nav-toggler">
+                            <span></span>
+                        </button>
+                            <nav class="nav">
+                                <div class="nav-inner">
+                                    <ul>
+                                        <li><a href="#home" class="nav-item link-item">Home</a></li>
+                                        <li><a href="#about" class="nav-item link-item">About</a></li>
+                                        <li><a href="#portfolio" class="nav-item link-item">Portfolio</a></li>
+                                        <li><a href="#contact" class="nav-item link-item">Contact</a></li>
+                                    </ul>
+                                </div>
+                            </nav>
+                    </div>
+                </div>
+            </div>
             <!-- Header End -->
 
             <!-- Home Section Start -->
-            <section class="home-section align-items-center">
+            <section class="home-section align-items-center" id="home"> 
                 <div class="container">
                     <div class="row align-items-center">
                         <div class="home-text">
                             <p>Hello I am</p>
                             <h1>Joachim Wambua</h1>
                             <h2>Software Engineer</h2>
-                            <a href="#" class="btn">About Me</a>
-                            <a href="#" class="btn">Portfolio</a>
+                            <a href="#about" class="btn link-item">About Me</a>
+                            <a href="#portfolio" class="btn link-item">Portfolio</a>
                         </div>
                         <div class="home-img">
                             <img src="./images/Kim3D.png" alt="Kim3D">
@@ -40,7 +82,7 @@
             <!-- Home Section End -->
 
             <!-- About Section Start -->
-            <section class="about-section sec-padding hidden">
+            <section class="about-section sec-padding" id="about">
                 <div class="container">
                     <div class="row">
                         <div class="section-title">
@@ -118,8 +160,8 @@
                                 </div>
                             </div>
                             <!-- Experience End -->
-                            <a href="#" class="btn">Download Resume</a>
-                            <a href="#" class="btn">Contact</a>
+                            <a href="Joachim_Wambua_ Resume.pdf" target="_blank" class="btn">Download Resume</a>
+                            <a href="#contact" class="btn link-item">Contact</a>
                         </div>
                     </div>
                 </div>
@@ -127,7 +169,7 @@
             <!-- About Section End -->
 
             <!-- Portfolio Section Start -->
-            <section class="portfolio-section sec-padding hidden">
+            <section class="portfolio-section sec-padding" id="portfolio">
                 <div class="container">
                     <div class="row">
                         <div class="section-title">
@@ -279,7 +321,7 @@
             <!-- Portfolio Section End -->
 
             <!-- Contact Section Start -->
-            <section class="contact-section sec-padding">
+            <section class="contact-section sec-padding" id="contact">
                 <div class="container">
                     <div class="row">
                         <div class="section-title">
